--- a/src/Tabrizi/Contact/Contact.css
+++ b/src/Tabrizi/Contact/Contact.css
@@ -1,7 +1,11 @@
+* {
+    box-sizing: border-box;
+}
+
 .contact {
     width: 100%;
     height: auto;
-    padding: 150px 0px;
+    padding: 150px 0;
     background-color: #1A1A1A;
 }
 
@@ -12,10 +16,12 @@
     margin: 0 auto;
     display: flex;
     flex-direction: row;
+    padding: 0 20px;
 }
 
 .contact .container-text {
     width: 50%;
+    margin-bottom: 20px;
 }
 
 .contact .container-text h1 {
@@ -31,11 +37,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .contact .container-text .input-box {
     width: 48%;
-    margin: 10px 0px;
+    margin: 10px 0;
     display: flex;
     flex-direction: column;
 }
@@ -64,7 +71,7 @@
 
 .contact .container-text .input-box-message {
     width: 100%;
-    margin: 10px 0px;
+    margin: 10px 0;
     display: flex;
     flex-direction: column;
 }
@@ -123,4 +130,121 @@
     transform: translateY(-50%);
     right: -150px;
     width: 700px;
+}
+
+@media (max-width: 425px) {
+    .contact {
+        overflow-x: hidden;
+        padding: 100px 0;
+    }
+
+    .contact .container {
+        flex-direction: column;
+        padding: 0 20px;
+    }
+
+    .contact .container-text {
+        width: 100%;
+        margin-bottom: 20px;
+        position: relative;
+    }
+
+    .contact .container-text h1 {
+        font-size: 28px;
+        margin-bottom: 30px;
+    }
+
+    .contact .container-text .container-contact {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contact .container-text .input-box {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .contact .container-text .input-box-message {
+        width: 100%;
+    }
+
+    .contact .container-text .container-btn {
+        justify-content: center;
+        align-items: center;
+        margin-top: 30px;
+    }
+
+    .contact .container-text .container-btn button {
+        padding: 10px 40px;
+        font-size: 14px;
+    }
+
+    .contact .container .image {
+        width: 100%;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        z-index: 2;
+        transform: translateX(10%);
+    }
+
+    .contact .container-text {
+        z-index: 1;
+    }
+}
+
+
+@media (min-width: 768px) {
+
+    .contact {
+        overflow-x: hidden;
+
+        padding: 120px 0;
+    }
+
+    .contact .container {
+        flex-direction: row;
+        padding: 0 60px;
+    }
+
+    .contact .container-text {
+        width: 50%;
+    }
+
+    .contact .container-text h1 {
+        font-size: 35px;
+        margin-bottom: 50px;
+    }
+
+    .contact .container-text .container-contact {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .contact .container-text .input-box {
+        width: 48%;
+    }
+
+    .contact .container-text .input-box-message {
+        width: 100%;
+    }
+
+    .contact .container-text .container-btn {
+        margin-top: 40px;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .contact .container-text .container-btn button {
+        padding: 10px 40px;
+        font-size: 16px;
+    }
+
+    .contact .container .image {
+        width: 600px;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: -150px;
+    }
 }
