--- a/src/Tabrizi/Header/Header.css
+++ b/src/Tabrizi/Header/Header.css
@@ -9,36 +9,39 @@ header {
     display: flex;
     flex-direction: row;
     z-index: 1;
+    justify-content: space-between;
+    padding: 10px 20px;
 }
 
-header .container-logo {
+.container-logo {
     width: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ffffff;
 }
 
-header .container-logo a {
-    width: 90%;
-    height: 90%;
-}
-
-header .container-logo .logo {
+.container-logo .logo {
     width: 100%;
     height: 100%;
     object-fit: contain;
 }
 
-header .container-header {
+.menu-button {
+    display: none;
+    background: none;
+    border: none;
+    font-size: 24px;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+.container-header {
     flex: 1;
     display: flex;
     flex-direction: column;
-    border: 1px solid #ffffff88;
-    border-top: none;
 }
 
-header .container-header .container-info {
+.container-info {
     width: 100%;
     height: 50px;
     padding: 0px 20px;
@@ -49,16 +52,15 @@ header .container-header .container-info {
     border-bottom: 1px solid #ffffff88;
 }
 
-header .container-header .container-info a {
+.container-info a {
     font-family: 'Rubik';
     font-size: 14px;
     font-weight: 300;
     color: #ffffff;
     text-decoration: none;
-    cursor: pointer;
 }
 
-header .container-header .container-info .container-social {
+.container-social {
     width: 60px;
     display: flex;
     flex-direction: row;
@@ -66,19 +68,7 @@ header .container-header .container-info .container-social {
     align-items: center;
 }
 
-header .container-header .container-info .container-social a {
-    font-size: 22px;
-    color: #ffffff;
-    cursor: pointer;
-}
-
-header .container-header .container-info .container-social a:nth-child(2) {
-    margin-top: 3px;
-    font-size: 25px;
-    color: #ffffff;
-}
-
-header .container-header .container-navigation {
+.container-navigation {
     width: 100%;
     height: 50px;
     padding: 0px 20px;
@@ -88,15 +78,162 @@ header .container-header .container-navigation {
     align-items: center;
 }
 
-header .container-header .container-navigation li {
+.container-navigation li {
     list-style: none;
 }
 
-header .container-header .container-navigation li a {
+.container-navigation li a {
     font-family: 'Rubik';
     font-size: 16px;
     font-weight: 300;
     color: #ffffff;
     text-decoration: none;
-    cursor: pointer;
+}
+
+@media (max-width: 425px) {
+    header {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        padding: 0 10px;
+    }
+
+    .container-logo {
+        width: auto;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .container-logo .logo {
+        width: 100px;
+        height: auto;
+    }
+
+    .menu-button {
+        display: block;
+        font-size: 18px;
+        color: #ffffff;
+        background: none;
+        border: none;
+        cursor: pointer;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+    }
+
+    .container-header {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        background: rgba(0, 0, 0, 0.9);
+        padding: 10px 0;
+        border-radius: 5px;
+        text-align: center;
+    }
+
+    .container-header.active {
+        display: flex;
+    }
+
+    .container-info {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 10px 0;
+    }
+
+    .container-info a {
+        font-size: 12px;
+        margin-bottom: 5px;
+    }
+
+    .container-navigation {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .container-navigation li a {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 768px) {
+    header {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        padding: 0 10px;
+    }
+
+    .container-logo {
+        width: auto;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .container-logo .logo {
+        width: 120px;
+        height: auto;
+    }
+
+    .menu-button {
+        display: block;
+        font-size: 20px;
+        color: #ffffff;
+        background: none;
+        border: none;
+        cursor: pointer;
+        position: absolute;
+        top: 15px;
+        right: 15px;
+    }
+
+    .container-header {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        background: rgba(0, 0, 0, 0.9);
+        padding: 10px 0;
+        border-radius: 5px;
+        text-align: center;
+    }
+
+    .container-header.active {
+        display: flex;
+    }
+
+    .container-info {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 10px 0;
+    }
+
+    .container-info a {
+        font-size: 12px;
+        margin-bottom: 5px;
+    }
+
+    .container-navigation {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .container-navigation li a {
+        font-size: 14px;
+    }
 }
