--- a/src/Tabrizi/Home/Home.css
+++ b/src/Tabrizi/Home/Home.css
@@ -1,34 +1,37 @@
-.home {
+.home { 
     width: 100%;
-    height: 95vh;
-    min-height: 900px;
+    height: 80vh;
+    min-height: 700px;
+    overflow: hidden;
+    position: relative;
+    top: 5vh; /* Moves the whole section a bit down */
 }
 
 .home .background-img {
     width: 100%;
     height: 100%;
-    min-height: 900px;
+    min-height: 700px;
 }
 
 .home .background-img img {
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     object-fit: cover;
-    min-height: 900px;
+    min-height: 700px;
 }
 
 .home .background {
     position: absolute;
     top: 0;
     width: 100%;
-    height: 95vh;
-    min-height: 900px;
+    height: 80vh;
+    min-height: 700px;
 }
 
 .home .container {
     position: absolute;
-    top: 5vh;
-    left: 50%;
+    top: 0; 
+    left: 20%;
     transform: translateX(-50%);
     width: 100%;
     max-width: 1420px;
@@ -36,38 +39,172 @@
     padding: 0px 60px;
     display: flex;
     align-items: center;
-    min-height: 900px;
+    justify-content: center;
+    min-height: 700px;
+    box-sizing: border-box;
 }
 
 .home .container .title {
-    width: 650px;
+    width: 100%;
+    max-width: 800px;
+    height: auto;
+    margin-bottom: 20px;
+    max-height: 400px;
+    overflow: hidden;
+}
+
+.home .container .title img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
 }
 
 .home .container p {
     line-height: 1.7rem;
-    margin-left: 80px;
-    margin-top: 50px;
+    margin-left: 0;
+    margin-top: 20px;
     font-family: 'Rubik';
     font-size: 18px;
     font-weight: 300;
     color: #ffffff;
+    text-align: center;
 }
 
 .home .container button {
-    margin-left: 80px;
-    margin-top: 50px;
-    padding: 12px 20px;
+    margin-left: 0;
+    margin-top: 20px;
+    padding: 16px 30px;
     font-family: 'Rubik';
-    font-size: 18px;
-    font-weight: 300;
+    font-size: 22px;
+    font-weight: 400;
     color: #ffffff;
     background-color: #E32021;
     border: none;
     border-radius: 4px;
     transition: .3s background-color;
     cursor: pointer;
+    text-align: center;
 }
 
 .home .container button:hover {
     background-color: #b41616;
+}
+
+@media (min-width: 768px) {
+    .home {
+        height: 70vh;
+        top: 0;
+    }
+
+    .home .background-img img {
+        height: 70vh;
+        top: -5vh;
+    }
+
+    .home .container {
+        padding: 0px 40px;
+        max-width: 1200px;
+        
+        left: 50%;
+        top: 3vh; /* Moves container down for larger screens */
+    }
+
+    .home .container p {
+        font-size: 16px;
+        margin-left: 0;
+        margin-top: 40px;
+    }
+
+    .home .container button {
+        font-size: 20px;
+        padding: 14px 25px;
+        margin-left: 0;
+        margin-top: 30px;
+    }
+}
+
+@media (max-width: 768px) {
+    .home {
+        height: auto;
+        min-height: 500px;
+        top: 0; 
+    }
+
+    .home .background-img img {
+        height: 60vh;
+        top: -10vh;
+    }
+
+    .home .container {
+        padding: 20px;
+        max-width: 100%;
+        left: 50%;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        top: -10vh;
+    }
+
+    .home .container .title {
+        width: 100%;
+        font-size: 24px;
+        text-align: center;
+    }
+
+    .home .container p {
+        font-size: 14px;
+        margin-left: 0;
+        margin-top: 20px;
+    }
+
+    .home .container button {
+        font-size: 16px;
+        padding: 12px 20px;
+        margin-left: 0;
+        margin-top: 20px;
+        width: 100%;
+    }
+}
+
+@media (max-width: 425px) {
+    .home {
+        height: auto;
+        min-height: 400px;
+        top: 0; /* Moves the section down for smaller screens */
+    }
+
+    .home .background-img img {
+        height: 40vh;
+        top: -15vh;
+    }
+
+    .home .container {
+        padding: 20px;
+        margin-top: 45%;
+        max-width: 100%;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        top: -15vh;
+    }
+
+    .home .container .title {
+        width: 100%;
+        font-size: 20px;
+        text-align: center;
+    }
+
+    .home .container p {
+        font-size: 12px;
+        margin-left: 0;
+        margin-top: 20px;
+    }
+
+    .home .container button {
+        font-size: 14px;
+        padding: 10px 16px;
+        margin-left: 0;
+        margin-top: 20px;
+        width: 100%;
+    }
 }
