--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -18,4 +22,17 @@ code {
   -moz-user-select: none;    
   -ms-user-select: none;     
   user-select: none;     
+}
+
+@media (max-width: 425px) {
+  .contact .absolute {
+    transform: translateX(-30%) translateY(190px);
+    left: 50%; 
+  }
+
+  .contact .absolute img {
+    width: 493px;
+    height: 493px; 
+    object-fit: contain;
+  }
 }
