--- a/src/Tabrizi/Footer/Footer.css
+++ b/src/Tabrizi/Footer/Footer.css
@@ -1,176 +1,176 @@
 footer {
-    position: relative;
-    width: 100%;
-    margin-top: 0px;
-    padding: 30px 0;
-    background-color: #111111;
-    color: #ffffff;
-    display: flex;
-    justify-content: center;
+  position: relative;
+  width: 100%;
+  margin-top: 0px;
+  padding: 30px 0;
+  background-color: #111111;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
 }
 
 footer .container-footer {
-    width: 100%;
-    max-width: 1320px;
-    margin: 0 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 100%;
+  max-width: 1320px;
+  margin: 0 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 footer .container-footer .footer-top {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 30px 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 0;
 }
 
 footer .container-footer .footer-top img {
-    width: 80px;
+  width: 80px;
 }
 
 footer .container-footer .footer-center {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    gap: 30px;
-    padding: 30px 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  padding: 30px 0;
 }
 
 footer .container-footer .footer-center .link,
 footer .container-footer .footer-center .services,
 footer .container-footer .footer-center .social,
 footer .container-footer .footer-center .coord {
-    width: 22%;
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 50px;
+  width: 22%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 50px;
 }
 
 footer .container-footer .footer-center h2 {
-    font-family: 'Monserrat', sans-serif;
-    font-size: 17px;
-    font-weight: 500;
-    margin-bottom: 30px;
+  font-family: "Monserrat", sans-serif;
+  font-size: 17px;
+  font-weight: 500;
+  margin-bottom: 30px;
 }
 
 footer .container-footer .footer-center h2::after {
-    content: '';
-    display: block;
-    width: 70px;
-    height: 2px;
-    background-color: #ffffff;
-    margin-top: 10px;
+  content: "";
+  display: block;
+  width: 70px;
+  height: 2px;
+  background-color: #ffffff;
+  margin-top: 10px;
 }
 
 footer .container-footer .footer-center ul {
-    width: 100%;
-    margin-top: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  width: 100%;
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 footer .container-footer .footer-center ul li {
-    font-family: 'Poppins', sans-serif;
-    list-style: none;
-    margin-bottom: 12px;
-    font-size: 15px;
-    font-weight: 300;
-    cursor: pointer;
+  font-family: "Poppins", sans-serif;
+  list-style: none;
+  margin-bottom: 12px;
+  font-size: 15px;
+  font-weight: 300;
+  cursor: pointer;
 }
 
 footer .container-footer .footer-center .social ul li,
 footer .container-footer .footer-center .coord ul li {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 footer .container-footer .footer-center .social ul li span,
 footer .container-footer .footer-center .coord ul li span {
-    font-size: 23px;
-    width: 30px;
-    margin-right: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  font-size: 23px;
+  width: 30px;
+  margin-right: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 footer .container-footer .footer-bottom {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 footer .container-footer .footer-bottom h3 {
-    font-family: 'Poppins', sans-serif;
-    font-size: 14px;
-    font-weight: 300;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 30px;
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
 }
 
 footer .container-footer .footer-bottom h4 {
-    font-family: 'Poppins', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    font-style: italic;
-    display: flex;
-    justify-content: center;
-    cursor: pointer;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  font-style: italic;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
 }
 
 footer .container-footer .footer-bottom h4 span {
-    font-size: 20px;
-    margin-right: 10px;
+  font-size: 20px;
+  margin-right: 10px;
 }
 
 footer .container-footer li:hover {
-    color: #30A9DE;
-    font-weight: 600;
+  color: #30a9de;
+  font-weight: 600;
 }
 
 @media (max-width: 768px) {
-    footer .container-footer .footer-center {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        gap: 20px;
-    }
+  footer .container-footer .footer-center {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 20px;
+  }
 
-    footer .container-footer .footer-center .link,
-    footer .container-footer .footer-center .services,
-    footer .container-footer .footer-center .social,
-    footer .container-footer .footer-center .coord {
-        width: 100%;
-        margin-bottom: 30px;
-    }
+  footer .container-footer .footer-center .link,
+  footer .container-footer .footer-center .services,
+  footer .container-footer .footer-center .social,
+  footer .container-footer .footer-center .coord {
+    width: 100%;
+    margin-bottom: 30px;
+  }
 }
 
 @media (max-width: 425px) {
-    footer .container-footer .footer-center {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        gap: 10px;
-    }
+  footer .container-footer .footer-center {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 10px;
+  }
 
-    footer .container-footer .footer-center .link,
-    footer .container-footer .footer-center .services,
-    footer .container-footer .footer-center .social,
-    footer .container-footer .footer-center .coord {
-        width: 100%;
-        font-size: 14px;
-        margin-bottom: 20px;
-    }
+  footer .container-footer .footer-center .link,
+  footer .container-footer .footer-center .services,
+  footer .container-footer .footer-center .social,
+  footer .container-footer .footer-center .coord {
+    width: 100%;
+    font-size: 14px;
+    margin-bottom: 20px;
+  }
 
-    footer .container-footer .footer-center h2 {
-        font-size: 15px;
-    }
+  footer .container-footer .footer-center h2 {
+    font-size: 15px;
+  }
 
-    footer .container-footer .footer-center ul li {
-        font-size: 13px;
-    }
+  footer .container-footer .footer-center ul li {
+    font-size: 13px;
+  }
 }
