--- a/src/Tabrizi/Footer/Footer.css
+++ b/src/Tabrizi/Footer/Footer.css
@@ -23,11 +23,12 @@ footer .container-footer .footer-top {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 30px 0;
+    margin: 40px 0;
 }
 
 footer .container-footer .footer-top img {
-    width: 80px;
+    width: 150px;
+    height: auto;
 }
 
 footer .container-footer .footer-center {
@@ -49,7 +50,7 @@ footer .container-footer .footer-center .coord {
 }
 
 footer .container-footer .footer-center h2 {
-    font-family: 'Monserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 17px;
     font-weight: 500;
     margin-bottom: 30px;
@@ -79,21 +80,35 @@ footer .container-footer .footer-center ul li {
     font-size: 15px;
     font-weight: 300;
     cursor: pointer;
+    display: flex;
+    align-items: center;
 }
 
-footer .container-footer .footer-center .social ul li,
-footer .container-footer .footer-center .coord ul li {
+footer .container-footer .footer-center .social ul li {
+    display: flex;
+    align-items: center;
     margin-bottom: 15px;
 }
 
-footer .container-footer .footer-center .social ul li span,
-footer .container-footer .footer-center .coord ul li span {
-    font-size: 23px;
-    width: 30px;
-    margin-right: 15px;
+footer .container-footer .footer-center .social ul li .social-link {
     display: flex;
-    justify-content: center;
     align-items: center;
+    color: #ffffff;
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    font-weight: 300;
+    text-decoration: none;
+    gap: 10px;
+}
+
+footer .container-footer .footer-center .social ul li .social-icon {
+    font-size: 23px;
+    margin-right: 10px;
+}
+
+footer .container-footer .footer-center .social ul li .social-link:hover {
+    color: #30A9DE;
+    font-weight: 600;
 }
 
 footer .container-footer .footer-bottom {
@@ -102,7 +117,9 @@ footer .container-footer .footer-bottom {
     flex-direction: column;
     justify-content: center;
 }
-
+footer .container-footer .footer-center .coord ul li span {
+    margin-right: 10px;
+}
 footer .container-footer .footer-bottom h3 {
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
@@ -136,7 +153,6 @@ footer .container-footer li:hover {
     footer .container-footer .footer-center {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
         gap: 20px;
     }
 
@@ -147,13 +163,21 @@ footer .container-footer li:hover {
         width: 100%;
         margin-bottom: 30px;
     }
+
+    footer .container-footer .footer-center ul li {
+        font-size: 14px;
+    }
+
+    footer .container-footer .footer-center .social ul li .social-icon {
+        margin-right: 10px;
+        font-size: 20px;
+    }
 }
 
 @media (max-width: 425px) {
     footer .container-footer .footer-center {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
         gap: 10px;
     }
 
@@ -162,15 +186,26 @@ footer .container-footer li:hover {
     footer .container-footer .footer-center .social,
     footer .container-footer .footer-center .coord {
         width: 100%;
-        font-size: 14px;
+        font-size: 13px;
         margin-bottom: 20px;
     }
 
     footer .container-footer .footer-center h2 {
-        font-size: 15px;
+        font-size: 14px;
     }
 
     footer .container-footer .footer-center ul li {
-        font-size: 13px;
+        font-size: 12px;
+    }
+
+    footer .container-footer .footer-center .social ul li,
+    footer .container-footer .footer-center .coord ul li {
+        display: flex;
+        align-items: center;
+    }
+
+    footer .container-footer .footer-center .social ul li .social-icon {
+        font-size: 18px;
+        margin-right: 8px;
     }
 }
