--- a/src/Tabrizi/Footer/Footer.css
+++ b/src/Tabrizi/Footer/Footer.css
@@ -13,6 +13,7 @@ footer .container-footer {
     width: 100%;
     max-width: 1320px;
     margin: 0 20px;
+    margin-left: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
