--- a/src/Tabrizi/Footer/Footer.css
+++ b/src/Tabrizi/Footer/Footer.css
@@ -7,6 +7,7 @@ footer {
     color: #ffffff;
     display: flex;
     justify-content: center;
+
 }
 
 footer .container-footer {
@@ -17,6 +18,7 @@ footer .container-footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-right: 10px;
 }
 
 footer .container-footer .footer-top {
